<resources>
    <string name="app_name">搜猴水务</string>
    <string name="rmb_pwd">记住密码</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="Login">登 陆</string>
    <string name="Company_name">河南搜猴网络科技有限公司</string>
    <string name="Record">抄表</string>
    <string name="Fault">故障</string>
    <string name="News">新装</string>
    <string name="Exit">退出</string>
    <string name="Loading">正在加载...</string>
    <string name="ServerError">服务器或网络错误！</string>
</resources>
