<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_img"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.souhou.watersystem.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_SouHou"
            android:layout_width="74dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:src="@drawable/login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorTextWhite"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_margin="20dp"
        android:background="@drawable/login_cen"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_account" />

            <EditText
                android:id="@+id/Login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="账号"
                android:padding="10dp"
                android:textColor="@color/colorTextWhite"
                android:textColorHint="@color/colorTextWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/Login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:ems="10"
                android:hint="密码"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/colorTextWhite" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <CheckBox
            android:id="@+id/cb_rmb_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorTextWhite"
            android:onClick="onClick"
            android:text="@string/rmb_pwd"
            android:textColor="@color/colorTextWhite" />

        <TextView
            android:id="@+id/forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:text="@string/forgot_pwd"
            android:textColor="@color/colorTextWhite" />
    </RelativeLayout>

    <TextView
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_corner"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/Login"
        android:textColor="@color/colorTextWhite"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/ddk"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:indeterminateDrawable="@drawable/ddk_progres_style"
            android:indeterminateTintMode="src_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/Company_name"
            android:textColor="@color/colorTextWhite" />
    </RelativeLayout>

</LinearLayout>
